[gd_scene load_steps=5 format=3 uid="uid://r1ntcqdujfol"]

[ext_resource type="Script" path="res://stages/game_stage.gd" id="1_7wndn"]
[ext_resource type="PackedScene" uid="uid://dbcmokh313nyl" path="res://Entities/game.tscn" id="2_8r4o7"]
[ext_resource type="PackedScene" uid="uid://qkegdwc8ux5o" path="res://stages/black_fade.tscn" id="8_50byo"]
[ext_resource type="Script" path="res://stages/game_camera.gd" id="9_lbjue"]

[node name="GameStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wndn")

[node name="Game" parent="." instance=ExtResource("2_8r4o7")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(292, 32)
script = ExtResource("9_lbjue")

[node name="VNUI" type="Control" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextContainer" type="CenterContainer" parent="VNUI"]
auto_translate_mode = 1
custom_minimum_size = Vector2(454, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -227.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VNUI/TextContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VNUI/TextContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="VNUI/TextContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="VNUI/TextContainer/MarginContainer/VBoxContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Name Label Here"

[node name="Panel" type="PanelContainer" parent="VNUI/TextContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 8

[node name="RichTextLabel" type="RichTextLabel" parent="VNUI/TextContainer/MarginContainer/VBoxContainer/Panel"]
auto_translate_mode = 1
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
text = "Text Body Here
dghfgh"
fit_content = true
scroll_active = false

[node name="ChoiceContainer" type="PanelContainer" parent="VNUI"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VNUI/ChoiceContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 4

[node name="ControlsContainer" type="VBoxContainer" parent="VNUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HistoryButton" type="Button" parent="VNUI/ControlsContainer"]
layout_mode = 2
text = "History"

[node name="LineReader" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="BlackFade" parent="." instance=ExtResource("8_50byo")]
visible = false
layout_mode = 1

[node name="CGTopContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CGTopContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CGTex" type="TextureRect" parent="CGTopContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="pressed" from="VNUI/ControlsContainer/HistoryButton" to="." method="_on_history_button_pressed"]
